Updated to JDA 6.3.0, JDAInteraction 0.1.4 and enforced compliance with new Discord API policy